# job-trackr

./: .dockerignore  .env.example  .gitignore  .ignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  Makefile  README.md  compose.dev.yml  compose.test.yml  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
backend/: .coveragerc  .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.dev  entrypoint_dev.sh  pyproject.toml  pytest.ini
backend/app/: __init__.py  lifespan.py  main.py
backend/app/api/: __init__.py  job_applications.py  job_offers.py  job_opportunities.py  job_postings.py  routes.py
backend/app/core/: __init__.py  config.py  database.py  logging.py
backend/app/db/: __init__.py  base.py
backend/app/domain/: __init__.py  errors.py
backend/app/extraction/: __init__.py
backend/app/extraction/email/: __init__.py  email_alert_fetcher.py  imap_client.py  job_extraction_service.py  parser_base.py  provider.py
backend/app/fixtures/: __init__.py  naming.py  writer.py
backend/app/generators/: __init__.py  fixtures.py  samples.py
backend/app/ingestion/: __init__.py  email_ingestion.py  web_ingestion.py
backend/app/models/: __init__.py  job_application.py  job_offer.py  job_opportunity.py  job_posting.py
backend/app/normalization/: __init__.py  headers.py  html.py  pii.py  url.py
backend/app/normalization/headers/: __init__.py  pii.py  whitelist.py
backend/app/normalization/html/: __init__.py  pii.py  structural.py
backend/app/normalization/pii/: __init__.py  patterns.py
backend/app/normalization/url/: policy.py  sanitize.py
backend/app/repositories/: __init__.py  job_application.py  job_offer.py  job_opportunity.py  job_posting.py
backend/app/samples/: __init__.py  writer.py
backend/app/schemas/: __init__.py  job_application.py  job_offer.py  job_opportunity.py  job_posting.py
backend/app/services/: __init__.py  job_application.py  job_offer.py  job_opportunity.py  job_posting.py
backend/app/utils/: manage_fixture.py  truncate_string.py
backend/app/utils/fixture_tools/: headers_cleaner.py  html_cleaner.py  naming.py  writer.py
backend/docker/job-extraction/: Dockerfile.dev
backend/docker/job-trackr/: Dockerfile.dev  entrypoint.sh
backend/env/job-extraction/: .env.example
backend/env/job-trackr/: .env.example
backend/env/postgres/: .env.example
backend/job-trackr/: manage.py
backend/job-trackr/apps/: __init__.py
backend/job-trackr/apps/ingestion/: __init__.py  admin.py  apps.py  models.py  tests.py  views.py
backend/job-trackr/apps/job_applications/: __init__.py  admin.py  apps.py  models.py  tests.py  views.py
backend/job-trackr/apps/jobs/: __init__.py  admin.py  apps.py  models.py  tests.py  views.py
backend/job-trackr/job_trackr/: __init__.py  asgi.py  urls.py  wsgi.py
backend/job-trackr/job_trackr/settings/: __init__.py  base.py  dev.py  prod.py
backend/job_extraction/: __init__.py  config.py  email_ingestion.py  main.py  mypy.ini
backend/job_extraction/api/: __init__.py  job_postings.py
backend/job_extraction/extraction/: __init__.py
backend/job_extraction/extraction/email/: __init__.py  email_alert_fetcher.py  imap_client.py  job_extraction_service.py  parser_base.py  provider.py
backend/job_extraction/normalization/: __init__.py
backend/job_extraction/normalization/headers/: __init__.py  pii.py  whitelist.py
backend/job_extraction/normalization/html/: __init__.py  pii.py  structural.py
backend/job_extraction/normalization/pii/: __init__.py  patterns.py
backend/job_extraction/normalization/url/: __init__.py  policy.py  sanitize.py
backend/job_extraction/schemas/: __init__.py  extracted_jobs.py
backend/job_extraction/services/: __init__.py  django_client.py
backend/job_extraction/testdata/: __init__.py
backend/job_extraction/testdata/fixtures/: __init__.py  naming.py  writer.py
backend/job_extraction/testdata/generators/: __init__.py  fixtures.py  samples.py
backend/job_extraction/testdata/samples/: __init__.py  writer.py
backend/job_ingestion/: .gitignore  Dockerfile.dev  Makefile  README.md  __init__.py  docker-compose.dev.yml  mypy.ini  pyproject.toml
backend/job_ingestion/app/: main.py
backend/job_ingestion/app/api/: __init__.py  job_postings.py
backend/job_ingestion/app/core/: config.py
backend/job_ingestion/app/extraction/: __init__.py
backend/job_ingestion/app/normalization/: __init__.py
backend/job_ingestion/app/schemas/: __init__.py  extracted_jobs.py
backend/job_ingestion/app/services/: __init__.py  django_client.py  email_ingestion.py
backend/job_ingestion/env/: .env.example
backend/job_ingestion/scripts/: generate_fixtures.py  generate_samples.py
backend/job_ingestion/testdata/: __init__.py
backend/job_ingestion/testdata/fixtures/: __init__.py  naming.py  writer.py
backend/job_ingestion/testdata/generators/: __init__.py  fixtures.py  samples.py
backend/job_ingestion/testdata/samples/: __init__.py  writer.py
backend/job_ingestion/tests/: conftest.py  test_config.py  test_job_postings_api.py
backend/job_trackr/: manage.py
backend/job_trackr/apps/: __init__.py
backend/job_trackr/apps/common/: __init__.py  normalization.py  uuid.py
backend/job_trackr/apps/ingestion/: __init__.py  admin.py  apps.py  auth.py  models.py  serializers.py  tests.py  urls.py  views.py  (+1 more)
backend/job_trackr/job_trackr/: __init__.py  asgi.py  urls.py  wsgi.py
backend/scripts/: __init__.py
backend/scripts/python/: __init__.py  add_header_to_file.py  generate_api_key.py  generate_fixtures.py  generate_samples.py  generate_secret_key.py  ingest_emails.py  script_logging.py
backend/scripts/shell/: add_spdx_header.sh  chown_user_migrations.bash  mkdir_mounted_folders.sh
backend/tests/: __init__.py  conftest.py
backend/tests/api/: __init__.py  test_job_offers_api.py  test_job_opportunity.py
backend/tests/factories/: job_candidacy.py  job_opportunity.py  job_posting.py
backend/tests/scripts/: test_add_header_to_file_pep8_spacing.py  test_skip_blank_lines.py
backend/tests/unit/: __init__.py  conftest.py
(+335 files in other folders)
