[project]
name = "job-trackr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # --- Web / APIs ---
    "fastapi>=0.121",
    "django>=6.0",
    "djangorestframework>=3.16",
    "uvicorn>=0.38",
    # --- Data / Validation ---
    "pydantic>=2.12",
    "pydantic-settings>=2.11",
    "pydantic-extra-types>=2.10",
    # --- HTTP ---
    "httpx>=0.28",
    # --- Database ---
    "psycopg[binary]>=3.2",
    # --- Ingestion / Scraping ---
    "beautifulsoup4>=4.14",
    # --- Utils ---
    "python-dotenv>=1.2",
    "python-multipart>=0.0.20",
    "python-dateutil>=2.9",
    "python-slugify>=8.0",
    "uuid6>=2025.0.1",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "ruff>=0.14",
    "pre-commit>=4.4",
    "debugpy>=1.8",
    "django-stubs>=5.2.9",
    "django-stubs-ext>=5.2.9",
    "mypy>=1.19.1",
]

test = [
    "pytest>=8.4",
    "pytest-asyncio>=1.2",
    "pytest-cov>=7.0",
    "pytest-django>=4.11",
    "pytest-mock>=3.15",
    "testcontainers>=4.13",
]

# --- Ruff ---
[tool.ruff]
target-version = "py312"
line-length = 88
fix = true
show-fixes = true
exclude = [
    "migrations",
    "ignore/**",
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle
    "F",    # pyflakes
    "B",    # flake8-bugbear
    "I",    # import sorting
    "UP",   # pyupgrade
    "SIM",  # simplifications
]
ignore = [
    "E501", # line length (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"app/services/*.py" = ["B008"]
"app/api/*.py" = ["B008"]
"backend/job-trackr/job_trackr/settings/*.py" = ["F403", "F401"]

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
plugins = ["mypy_django_plugin.main"]

strict = true
warn_unused_configs = true
warn_return_any = true

[tool.django-stubs]
django_settings_module = "job_trackr.settings.dev"
