# backend/pyproject.toml
[project]
name = "job-trackr"
version = "0.1.0"
description = "Django backend for a job application tracking dashboard."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=6.0",
    "djangorestframework>=3.16",
    "psycopg[binary]>=3.2",
    "uuid6>=2025.0.1",
    "django-filter>=25.2",
]

[dependency-groups]
dev = [
    "ruff>=0.14",
    "pre-commit>=4.4",
    "debugpy>=1.8",
    "django-stubs>=5.2.9",
    "django-stubs-ext>=5.2.9",
    "djangorestframework-stubs>=3.16.0",
    "mypy>=1.19.1",
    "types-django-filter>=25.2.0.20260408",
    "deptry>=0.25",
]

test = [
    "pytest>=8.4",
    "pytest-cov>=7.0",
    "pytest-django>=4.11",
    "factory-boy>=3.3.3",
]

# --- ruff ---
[tool.ruff]
target-version = "py312"
line-length = 88
fix = true
show-fixes = true
exclude = [
    "migrations",
    "private/**",
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle
    "F",    # pyflakes
    "B",    # flake8-bugbear
    "I",    # import sorting
    "UP",   # pyupgrade
    "SIM",  # simplifications
]
ignore = [
    "E501", # line length (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"job_trackr/job_trackr/settings/*.py" = ["F403", "F401"]

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# --- mypy ---
[tool.mypy]
python_version = "3.12"
mypy_path = "$MYPY_CONFIG_FILE_DIR/job_trackr"

plugins = [
  "mypy_django_plugin.main",
  "mypy_drf_plugin.main",
]

strict = true
warn_unused_configs = true
warn_return_any = true
show_error_codes = true
pretty = true

exclude = [
  "(^|/)migrations/.*\\.py$",
]

[tool.django-stubs]
django_settings_module = "job_trackr.settings.mypy"
strict_settings = true

# Do not allow missing stubs globally;
# handle per-module via overrides
ignore_missing_imports = false

[[tool.mypy.overrides]]
module = [
  "apps.jobs.opportunities.admin",
  "apps.jobs.postings.admin",
  "apps.job_applications.admin",
]
disable_error_code = ["type-arg"]

# --- deptry ---
[tool.deptry]
exclude = [
  ".venv",
  "env",
  ".*/migrations/.*",
  "tests",
]

known_first_party = [
  "apps",
  "job_trackr",
]

[tool.deptry.per_rule_ignores]
DEP002 = ["psycopg"]
